fix build bustage, bug 658503